--- a/docs.html
+++ b/docs.html
@@ -34,6 +34,24 @@
 
 <h1 id="Getting%20Started">Getting Started</h1>
 
+<h2 id="Download%20Inky">Download Inky</h2>
+
+<p>First, if you haven&#8217;t done this yet, you should download the free <a href="https://www.inklestudios.com/ink/">Inky</a> and familiarize yourself with it.</p>
+
+<p>It&#8217;s a great editor that allows you to create choice-based text games.</p>
+
+<p>(The latest Inky version might crash on Linux. If so, try an earlier version, like version 0.13.0 from <a href="https://github.com/inkle/inky/releases">here</a>.)</p>
+
+<ul>
+<li><p>Once you are done with that, download inkberry, unzip it and run it, even though your operating system tells you that it&#8217;s a risk. (It&#8217;s not really a huge risk, but I assume zero responsibility for any data losses or other problems arising from the usage of inkberry. See the license. Make sure to make regular backups.)</p></li>
+<li><p>Click on the big &#8220;Create a New Project&#8221; button.</p></li>
+<li><p>Choose a directory and a name for your project. The name is mostly for you. It will be shown in inkberry&#8217;s &#8220;Recent Projects&#8221; view, so choose a name that makes sense to you. The name will not be shown in the final game.</p></li>
+<li><p>Choose a template.</p></li>
+<li><p>A window with some text should open. This is the preview of your game.</p></li>
+<li><p>Click on &#8220;Project&#8221; -&#62; &#8220;Open in File Manager&#8221; to open the newly created directory. You should see all kinds of files inside it. What you want to do now, is go into <strong>Inky</strong> and open the file &#8220;story.ink&#8221;.</p></li>
+<li><p>Change some text and save. You should see your changes reflected in the inkberry preview window!</p></li>
+</ul>
+
 <h2 id="Creating%20a%20new%20Inchiostro%20Project">Creating a new Inchiostro Project</h2>
 
 <h3 id="The%20simple%20way:%20use%20Inkberry">The simple way: use Inkberry</h3>
@@ -59,9 +77,11 @@
 <p><img src="img/screen1.png" alt="Alt text" />
 <img src="img/screen2.png" alt="Alt text" /></p>
 
-<h3 id="The%20harder%20way">The harder way</h3>
+<h3 id="The%20manual%20way">The manual way</h3>
 
-<p>Alternatively, if you are familiar with JS development, you can just download the Inchiostro template and set up your own workflow. Inchiostro doesn&#8217;t require a build step.</p>
+<p>Alternatively, <a href="https://github.com/Daniel-Wittgenstein/inchiostro-dist/raw/refs/heads/main/inchiostro-latest.zip">download the Inchiostro template</a> manually.</p>
+
+<p>It&#8217;s basically just a bunch of JS and CSS files and an index.html</p>
 
 <p>Inchiostro works in a similar way to the standard web template exported by Inky: it expects a file called &#8220;story.js&#8221; starting with &#8220;var storyContent = &#8230;&#8221;</p>
 
