--- a/docs.html
+++ b/docs.html
@@ -42,21 +42,13 @@
 
 <p>(The latest Inky version might crash on Linux. If so, try an earlier version, like version 0.13.0 from <a href="https://github.com/inkle/inky/releases">here</a>.)</p>
 
-<ul>
-<li><p>Once you are done with that, download inkberry, unzip it and run it, even though your operating system tells you that it&#8217;s a risk. (It&#8217;s not really a huge risk, but I assume zero responsibility for any data losses or other problems arising from the usage of inkberry. See the license. Make sure to make regular backups.)</p></li>
-<li><p>Click on the big &#8220;Create a New Project&#8221; button.</p></li>
-<li><p>Choose a directory and a name for your project. The name is mostly for you. It will be shown in inkberry&#8217;s &#8220;Recent Projects&#8221; view, so choose a name that makes sense to you. The name will not be shown in the final game.</p></li>
-<li><p>Choose a template.</p></li>
-<li><p>A window with some text should open. This is the preview of your game.</p></li>
-<li><p>Click on &#8220;Project&#8221; -&#62; &#8220;Open in File Manager&#8221; to open the newly created directory. You should see all kinds of files inside it. What you want to do now, is go into <strong>Inky</strong> and open the file &#8220;story.ink&#8221;.</p></li>
-<li><p>Change some text and save. You should see your changes reflected in the inkberry preview window!</p></li>
-</ul>
+<h2 id="Create%20a%20new%20Inchiostro%20Project">Create a new Inchiostro Project</h2>
 
-<h2 id="Creating%20a%20new%20Inchiostro%20Project">Creating a new Inchiostro Project</h2>
+<p>Next, we will create a new Inchiostro project.</p>
 
 <h3 id="The%20simple%20way:%20use%20Inkberry">The simple way: use Inkberry</h3>
 
-<p>Inkberry is an app that creates, compiles and previews Ink stories. It also comes with Inchiostro built-in.</p>
+<p>Inkberry is an app that creates, compiles and previews Ink stories. It can be used with different story templates, but it also comes with Inchiostro built-in.</p>
 
 <p>First, download <a href="https://github.com/Daniel-Wittgenstein/inkberry-app/releases/tag/0.0.12/">Inkberry</a></p>
 
@@ -70,20 +62,25 @@
 
 <p>Unzip the program and run it. Your OS might warn you that the app is not code-signed.</p>
 
-<p>(The creator of Inkberry (accidentally also me) assumes zero responsibility for any damages that might happen. Do not use Inkberry with story templates you do not trust.)</p>
+<p>(The creator of Inkberry (accidentally also me) assumes zero responsibility for any damages that might happen. Also, do not use Inkberry with story templates you do not trust.)</p>
 
-<p>Now use the graphical user interface to create a new Inchiostro project. Done.</p>
+<p>Now use the graphical user interface to create a new Inchiostro project.</p>
 
-<p><img src="img/screen1.png" alt="Alt text" />
-<img src="img/screen2.png" alt="Alt text" /></p>
+<p><img src="img/screen1.png" alt="Alt text" /></p>
+
+<p><img src="img/screen2.png" alt="Alt text" /></p>
+
+<p>A window with some text should open. This is the preview of your game.</p>
+
+<p>Click on &#8220;Project&#8221; -&#62; &#8220;Open in File Manager&#8221; to open the newly created directory. You should see all kinds of files inside it. You need the file &#8220;story.ink&#8221;. What you want to do now, is go into <strong>Inky</strong> and open the file &#8220;story.ink&#8221; with Inky.</p>
+
+<p>Change some text and save. You should see your changes reflected in the Inkberry preview window!</p>
 
 <h3 id="The%20manual%20way">The manual way</h3>
 
-<p>Alternatively, <a href="https://github.com/Daniel-Wittgenstein/inchiostro-dist/raw/refs/heads/main/inchiostro-latest.zip">download the Inchiostro template</a> manually.</p>
+<p>If Inkberry does not work for you (or you are paranoid about security), you can also <a href="https://github.com/Daniel-Wittgenstein/inchiostro-dist/raw/refs/heads/main/inchiostro-latest.zip">download the Inchiostro template</a> manually.</p>
 
-<p>It&#8217;s basically just a bunch of JS and CSS files and an index.html</p>
-
-<p>Inchiostro works in a similar way to the standard web template exported by Inky: it expects a file called &#8220;story.js&#8221; starting with &#8220;var storyContent = &#8230;&#8221;</p>
+<p>It&#8217;s basically just a bunch of JS and CSS files and an index.html file. Inchiostro works in a similar way to the standard web template exported by Inky: it expects a file called &#8220;story.js&#8221; starting with &#8220;var storyContent = &#8230;&#8221;</p>
 
 <p>You can just replace the contents of &#8220;story.js&#8221; with your own contents to use Inchiostro.</p>
 
