--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Inchiostro - an Ink Story Template</title>
+      <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-      Hello!
+      <h1>Inchiostro</h1>
+      <p>Inchiostro is a web template for Ink.</p>
+      <a href="docs.html">Documentation</a>
     </body>
 
 </html>
